--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -77,7 +77,7 @@ input {
 }
 
 @media screen and (max-width: 768px) {
-    .messages {
+    .chat-messages {
         width: 80%;
     }
 
@@ -86,11 +86,11 @@ input {
     }
 
     input {
-        width: 80%;
+        width: 70%;
     }
 
-    button {
-        width: 50%;
+    .chat-button {
+        width: 70%;
     }
     
 }
